added a footer to the website

--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
                 </p>
             </div>
         </div>
+        <footer>Designed and Developed by Fluxstride</footer>
     </body>
 </html>
