--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 </p>
             </div>
         </div>
-        <footer>Designed and Developed by Fluxstride</footer>
+        <footer>
+            Designed and Developed<br />
+            by <span id="fluxstride">Fluxstride</span>
+        </footer>
     </body>
 </html>
